[tool.poetry]
name = "klv_over_mpeg_extractor"
version = "0.1.0"
description = ""
authors = ["Noam Hershkop <naom3210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "8.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
klv_extractor = "klv_over_mpeg_extractor.run:klv_extractor"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
